Finally changed Java version to Java 8, little improvements